Fixes login art alignment

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -3,6 +3,8 @@
 
   .art {
     max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 
     img {
       width: 100%;
